--- a/RythmAnalytics/templates/index.html
+++ b/RythmAnalytics/templates/index.html
@@ -32,10 +32,10 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="pie"></div>
+        <div id="plot"></div>
       </div>
       <div class="col-md-5">
-        <div id="gauge"></div>
+        <div id="plot_artists"></div>
       </div>
     </div>
   </div>
@@ -48,7 +48,6 @@
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="{{ url_for('static', filename='js/bonus.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 </body>
