--- a/RythmAnalytics/templates/index.html
+++ b/RythmAnalytics/templates/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
-<body background="color">
+<body>
 
   <div class="container" style="background-color:azure">
     <div class="row">
@@ -21,20 +21,20 @@
       </div>
     <div class="row">
       <div class="col-md-1">
-        <div class="Year">
-          <div class="panel panel-primary">
-            <div class="panel-body">
+        <div class="col-md-1">
+          <!-- <div class="panel panel-primary"> -->
+            <!-- <div class="panel-body"> -->
               <h5 class="panel-title">Year:</h5>
               <select id="selDataset" onchange="optionChanged(this.value)"></select>
-            </div>
-          </div>
+            <!-- </div> -->
+          <!-- </div> -->
         </div> 
       </div>
       <div class="col-md-5">
         <div id="plotSales">
-          <div class="panel panel-primary" ">
+          <div class="panel panel-primary">
             <div class="panel-body">
-              <!-- <h3 class="panel-title">Album Sales by Year</h3> -->
+              <h3 class="panel-title">Album Sales by Year using Chart.js</h3>
             </div>
             <canvas id="plotSalesPanel" width="400" height="280" ></canvas>
           </div>
@@ -43,9 +43,9 @@
       <div class="col-md-6">
         <div id="plotCrtics">
           <div class="panel panel-primary">
-            <!-- <div class="panel-body"> -->
-              <!-- <h3 class="panel-title">Album Critics by Year</h3> -->
-            <!-- </div> -->
+            <div class="panel-body">
+              <h3 class="panel-title">Album Critics by Year using Plotly.js</h3>
+            </div>
             <div id="plotCriticsPanel" style="height: 350px; "></div>
           </div>
         </div>
@@ -56,9 +56,9 @@
         <div id="plotLyrics">
           <div class="panel panel-primary">
             <div class="panel-body">
-              <h3 class="panel-title">Top Lyrics Words by Year</h3>
+              <h3 class="panel-title">Top 5 Popular words used in Popular songs using Chart.js</h3>
             </div>
-            <canvas id="plotLyricsPanel" class="panel-body"></canvas>
+            <canvas id="plotLyricsPanel" width="400" height="280"></canvas>
           </div>
         </div>
       </div>
@@ -66,7 +66,7 @@
         <div id="plotArtist">
           <div class="panel panel-primary">
             <div class="panel-body">
-              <!-- <h3 class="panel-title">Album Sales by Artist</h3> -->
+              <h3 class="panel-title">Top 5 Artist by count of Albums using Chart.js</h3>
             </div>
             <canvas id="plotArtistPanel" width="400" height="280"></canvas>
           </div>
